--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-promise-router": "^4.0.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.3",
     "pg-promise": "^10.6.1"
   },
   "devDependencies": {
