--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,3 @@
 {
-    "sqltools.connections": [
-        {
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 5432,
-            "askForPassword": true,
-            "driver": "PostgreSQL",
-            "name": "Cryptomania",
-            "group": "Web",
-            "database": "cryptoMania",
-            "username": "postgres"
-        }
-    ]
+    "sqltools.connections": []
 }
