--- a/package.json
+++ b/package.json
@@ -3,21 +3,37 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "stop": "taskkill -f -im node.exe"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-promise-router": "^4.0.1",
+    "express-mysql-session": "^2.1.4",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.6",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.4",
-    "pg": "^8.3.3",
-    "pg-promise": "^10.6.1"
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "serve-favicon": "^2.5.0",
+    "session-file-store": "^1.4.0",
+    "uuid": "^8.3.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "eslint": "^7.8.1"
